// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toSheetLine should parse a simple invoice -creation- 1`] = `
Array [
  Array [
    "{\\"client\\":{\\"name\\":\\"client-name\\",\\"city\\":\\"client-city\\",\\"address\\":\\"client-address\\"},\\"dates\\":{\\"end\\":1522620000000,\\"print\\":1531472327262},\\"lines\\":[{\\"title\\":\\"2\\",\\"nb\\":\\"10\\",\\"pricePerUnit\\":\\"100\\"}],\\"id\\":\\"00006\\",\\"timetable\\":[],\\"fileId\\":\\"1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5\\"}",
    "client-name",
    6,
    "2018-07-13",
    1000,
    "non",
    "https://drive.google.com/file/d/1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5/view",
  ],
]
`;

exports[`toSheetLine should parse a simple invoice -modification- 1`] = `
Array [
  Array [
    "{\\"client\\":{\\"name\\":\\"client-name\\",\\"city\\":\\"client-city\\",\\"address\\":\\"client-address\\"},\\"dates\\":{\\"end\\":1522620000000,\\"print\\":1531472327262},\\"lines\\":[{\\"title\\":\\"2\\",\\"nb\\":\\"10\\",\\"pricePerUnit\\":\\"100\\"}],\\"id\\":\\"00006\\",\\"timetable\\":[],\\"fileId\\":\\"1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5\\",\\"paid\\":true}",
    "client-name",
    6,
    "2018-07-13",
    1000,
    "oui",
    "https://drive.google.com/file/d/1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5/view",
  ],
]
`;

exports[`toSheetLine should parse a timetable invoice -creation- 1`] = `
Array [
  Array [
    "{\\"client\\":{\\"name\\":\\"client-name\\",\\"city\\":\\"client-city\\",\\"address\\":\\"client-address\\"},\\"dates\\":{\\"end\\":1522620000000,\\"print\\":1531472327262},\\"lines\\":[{\\"title\\":\\"2\\",\\"nb\\":\\"10\\",\\"pricePerUnit\\":\\"100\\"}],\\"id\\":\\"00006\\",\\"timetable\\":[{\\"date\\":\\"2018-03-01\\",\\"price\\":\\"133\\"},{\\"date\\":\\"2018-04-01\\",\\"price\\":\\"123\\",\\"paid\\":true}],\\"fileId\\":\\"1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5\\"}",
    "client-name",
    6,
    "2018-03-01",
    133,
    "non",
    "https://drive.google.com/file/d/1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5/view",
  ],
  Array [
    "{\\"client\\":{\\"name\\":\\"client-name\\",\\"city\\":\\"client-city\\",\\"address\\":\\"client-address\\"},\\"dates\\":{\\"end\\":1522620000000,\\"print\\":1531472327262},\\"lines\\":[{\\"title\\":\\"2\\",\\"nb\\":\\"10\\",\\"pricePerUnit\\":\\"100\\"}],\\"id\\":\\"00006\\",\\"timetable\\":[{\\"date\\":\\"2018-03-01\\",\\"price\\":\\"133\\"},{\\"date\\":\\"2018-04-01\\",\\"price\\":\\"123\\",\\"paid\\":true}],\\"fileId\\":\\"1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5\\"}",
    "client-name",
    6,
    "2018-04-01",
    123,
    "oui",
    "https://drive.google.com/file/d/1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5/view",
  ],
]
`;

exports[`toSheetLine should parse a timetable invoice -modification- 1`] = `
Array [
  Array [
    "{\\"client\\":{\\"name\\":\\"client-name\\",\\"city\\":\\"client-city\\",\\"address\\":\\"client-address\\"},\\"dates\\":{\\"end\\":1522620000000,\\"print\\":1531472327262},\\"lines\\":[{\\"title\\":\\"2\\",\\"nb\\":\\"10\\",\\"pricePerUnit\\":\\"100\\"}],\\"id\\":\\"00006\\",\\"timetable\\":[{\\"date\\":\\"2018-03-01\\",\\"price\\":\\"133\\"},{\\"date\\":\\"2018-04-01\\",\\"price\\":\\"123\\",\\"paid\\":true}],\\"fileId\\":\\"1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5\\"}",
    "client-name",
    6,
    "2018-03-01",
    133,
    "non",
    "https://drive.google.com/file/d/1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5/view",
  ],
  Array [
    "{\\"client\\":{\\"name\\":\\"client-name\\",\\"city\\":\\"client-city\\",\\"address\\":\\"client-address\\"},\\"dates\\":{\\"end\\":1522620000000,\\"print\\":1531472327262},\\"lines\\":[{\\"title\\":\\"2\\",\\"nb\\":\\"10\\",\\"pricePerUnit\\":\\"100\\"}],\\"id\\":\\"00006\\",\\"timetable\\":[{\\"date\\":\\"2018-03-01\\",\\"price\\":\\"133\\"},{\\"date\\":\\"2018-04-01\\",\\"price\\":\\"123\\",\\"paid\\":true}],\\"fileId\\":\\"1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5\\"}",
    "client-name",
    6,
    "2018-04-01",
    123,
    "oui",
    "https://drive.google.com/file/d/1xm33aSYp62yAxht0a5f-0kw7hTX_z3I5/view",
  ],
]
`;
